# libgpow

./: CMakeLists.txt  LICENSE
cmake/: testing.cmake
include/: common.h  system.h  temperature.h
tests/: system_test.cc
